--- a/contacto.html
+++ b/contacto.html
@@ -57,6 +57,24 @@ window.smartsupp||(function(d) {
             </div>
         </header>
 
+
+
+
+<!--________________________________________downloader imagen ___________________________________________________________________________-->
+<div class="container">
+    <div class="row">
+      <div class="loader">
+        <img class="circulo" src="images/LOGO 2 load.png" alt="">
+      </div>
+    </div>
+  </div>
+  <!--________________________________________fin   downloader imagen ___________________________________________________________________________-->
+  
+  
+
+
+
+
         <div class="icon-bar">
             <a href="https://wa.me/5212225480576?text=Hola%20envía%20un%20mensaje%20para%20poder%20atenderte" target="_blank" class="facebook"><i class="fa fa-whatsapp"></i></a> 
             <a href="#" class="twitter"><i class="fa fa-twitter"></i></a> 
@@ -260,7 +278,16 @@ window.smartsupp||(function(d) {
     <script src="js/sitio.js"></script>
 
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
+  <script type="text/javascript">
+    $(window).load(function() {
+        $(".loader").fadeOut("slow");
+    });
+    </script>
 
 <!-- ______________________________________________________________mensaje alerta____________________________________________________________________________!-->
 <Script language=JavaScript>
