--- a/facturacion.html
+++ b/facturacion.html
@@ -72,8 +72,9 @@ window.smartsupp||(function(d) {
 
           <div class="texto-encabezado text-xs-center">
 
+            
             <div class="container">
-                <h1 class="display-4 wow bounceIn"><img src="images/invoice_22150.png" alt="">Facturacion</h1>
+                <h1 class="display-4 wow bounceIn"><img src="images/sitio.jpg" alt="">Facturacion</h1>
                 <button class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">
   Importante!!
 </button>
