--- a/servicios.html
+++ b/servicios.html
@@ -43,10 +43,8 @@
   </script>
 </head>
 
-
 <body class="paginas-internas">
   <section class="bienvenidos">
-
     <header class="encabezado navbar-fixed-top" role="banner" id="encabezado">
       <div class="container">
           <img src="images/logo2.png" alt="">
@@ -68,6 +66,18 @@
       </div>
     </header>
 
+<!-- ____________________________________________________inicia downloader imagen_______________________________________________________________-->
+    <div class="container">
+      <div class="row">
+        <div class="loader">
+          <img class="circulo" src="images/LOGO 2 load.png" alt="">
+        </div>
+      </div>
+    </div>
+    <!--________________________________________fin   downloader imagen ___________________________________________________________________________-->
+    
+
+
     <div class="texto-encabezado text-xs-center">
       <div class="container">
         <h1 class="display-4  wow bounceIn"><img src="images/service_107050.png" alt="">Servicios</h1>
@@ -75,67 +85,26 @@
       </div>
     </div>
 
+
+
   </section>
   <section class="ruta py-1">
     <div class="container">
       <div class="row">
         <div class="col-xs-12 text-xs-right">
           <a href="index.html">Inicio</a> » Servicios
-
         </div>
       </div>
     </div>
   </section>
-  <main class="py-1 lista-servicios">
-    <div class="container">
-      <div class="row">
 
-        <div class="col-md-4">
-          <article class="item-servicios">
-            <i class="fa fa-motorcycle" aria-hidden="true"></i>
-            <h4>Recoleccion Gratuita</h4>
-
-            <p>
-              Llama y nuestro recolector te visitara en tu Domicio o en tu Trabajo
-            </p>
-            <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#servicio1">Más información</a>
-
-          </article>
-        </div>
-
-
-        <div class="col-md-4">
-          <article class="item-servicios">
-            <i class="fa fa-cart-arrow-down " aria-hidden="true"></i>
-            <h4>Soluciones a Ventas por Internet.</h4>
-            <p>
-              No detengas tus ventas por el Servicio de Envio nosotros tenemos la Solucion .
-            </p>
-            <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#servicio2">Más información</a>
-
-          </article>
-        </div>
-
-        <div class="col-md-4">
-          <article class="item-servicios">
-            <i class="fa fa-ticket" aria-hidden="true"></i>
-            <h4>Venta de Boletos</h4>
-
-            <p>
-              Si vas a Viajar en Autobus o en Avion, ofrecemos venta de boletaje sin hacer filas y cerca de tu domicilio
-              en cualquiera de nuestras sucursales.
-            </p>
-            <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#servicio3">Más información</a>
-
-          </article>
-        </div>
-
-      </div>
-    </div>
-  </main>
+<!-- ____________________________________________________inicia el cuerpo_______________________________________________________________-->
 
 
 
+<!-- ____________________________________________________finaliza el cuerpo_______________________________________________________________-->
+
+<!-- ____________________________________________________inicia el footer_______________________________________________________________-->
   <footer>
       <div class="container">
         <div class="row">
@@ -209,116 +178,12 @@
             </div> 
          </div>
      </footer>
+<!-- ____________________________________________________fin el footer_______________________________________________________________-->
+  
 
-  <a data-scroll class="ir-arriba" href="#encabezado"><i class="fa  fa-arrow-circle-up" aria-hidden="true"> </i> </a>
-
-
-
-
-  <!-- Modal 1  -->
-  <div class="modal fade" id="servicio1" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          <h2 class="modal-title">Recoleccion Gratuita.</h2>
-        </div>
-        <div class="modal-body">
-          <div class="row">
-
-            <div class="col-md-8">
-              <h5>Nosotros vamos a tu domiclio o tu lugar de Trabajo, las recolecciones se realizan en horario de
-                <strong>9:00am a 4:00pm</strong> para que tu envío se realice el mismo dia o de <strong>5:00pm a
-                  6:00pm</strong> para el dia siguiente.</h5>
-            </div>
-
-            <div class="col-md-4">
-              <img src="images/servicio-1.svg" alt="" width="150" class="img-fluid m-x-auto">
-            </div>
-
-
-          </div>
-
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-
-  <!-- Modal 2  -->
-  <div class="modal fade" id="servicio2" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          <h4 class="modal-title">Ventas por Internet</h4>
-        </div>
-        <div class="modal-body">
-          <div class="row">
-
-            <div class="col-md-8">
-              <h5>Si tus necesidades son mayores apartir de 10 envíos mensuales tenemos costos vajos para cualquier
-                parte de la republica, servicio express o terrestre al mejor precio.</h5>
-            </div>
-
-            <div class="col-md-4">
-              <img src="images/dhl.jpg " alt="" width="80" class="img-fluid m-x-auto m-t-2">
-              <img src="images/fedex.png" alt="" width=80" class="img-fluid m-x-auto m-t-2">
-              <img src="images/estafeta.png" alt="" width="80" class="img-fluid m-x-auto m-t-2">
-
-
-            </div>
-
-
-          </div>
-
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-
-  <!-- Modal 2  -->
-  <div class="modal fade" id="servicio3" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          <h2 class="modal-title">Venta de Boletos</h2>
-        </div>
-        <div class="modal-body">
-          <div class="row">
-
-            <div class="col-md-8">
-              <h4>Boletos, ADO, ETN, AU.</h4>
-              <h4>*Boletos de las Aerolineas Volaris, Interjet, VivaAerobus.</h4>
-            </div>
-
-
-            <div class="col-md-4">
-              <img src="images/volaris.jpg " alt="" width="80" class="img-fluid m-x-auto m-t-2">
-              <img src="images/inter.png" alt="" width=80" class="img-fluid m-x-auto m-t-2">
-              <img src="images/viva.png" alt="" width="80" class="img-fluid m-x-auto m-t-2">
-
-
-            </div>
-
-
-          </div>
-
-        </div>
-
-      </div>
-    </div>
-  </div>
+<!-- ____________________________________________________inicia el boton arriba_______________________________________________________________-->
+<a data-scroll class="ir-arriba" href="#encabezado"><i class="fa  fa-arrow-circle-up" aria-hidden="true"> </i> </a>
+<!-- ____________________________________________________inicia el boton arriba_______________________________________________________________-->
 
 
 
@@ -338,7 +203,16 @@
   <script src="js/smooth-scroll.min.js"></script>
   <script src="js/sitio.js"></script>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
+  <script type="text/javascript">
+    $(window).load(function() {
+        $(".loader").fadeOut("slow");
+    });
+    </script>
 
 
   <!-- ______________________________________________________________mensaje alerta____________________________________________________________________________!-->
