--- a/empaque.html
+++ b/empaque.html
@@ -57,7 +57,16 @@ window.smartsupp||(function(d) {
                 </nav>
             </div>
         </header>
-
+<!--________________________________________downloader imagen ___________________________________________________________________________-->
+<div class="container">
+    <div class="row">
+      <div class="loader">
+        <img class="circulo" src="images/LOGO 2 load.png" alt="">
+      </div>
+    </div>
+  </div>
+  <!--________________________________________fin   downloader imagen ___________________________________________________________________________-->
+  
 
         <div class="texto-encabezado text-xs-center">
 
@@ -275,7 +284,16 @@ window.smartsupp||(function(d) {
     <script src="js/smooth-scroll.min.js"></script>
     <script src="js/sitio.js"></script>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
+  <script type="text/javascript">
+    $(window).load(function() {
+        $(".loader").fadeOut("slow");
+    });
+    </script>
 
 
 <!-- ______________________________________________________________mensaje alerta____________________________________________________________________________!-->
