--- a/franquicias.html
+++ b/franquicias.html
@@ -74,8 +74,15 @@
     </header>
 
 
-
-
+    <div class="container">
+      <div class="row">
+        <div class="loader">
+          <img class="circulo" src="images/LOGO 2 load.png" alt="">
+        </div>
+      </div>
+    </div>
+    <!--________________________________________fin   downloader imagen ___________________________________________________________________________-->
+    
 
     <div class="icon-bar">
       <a href="https://wa.me/5212225480576?text=Hola%20envía%20un%20mensaje%20para%20poder%20atenderte" target="_blank" class="facebook"><i class="fa fa-whatsapp"></i></a> 
@@ -127,53 +134,7 @@
     </div>
     <hr>
   </div>
-  <div class="container">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="images/carro/1.jpg" alt="First slide">
-        </div>
-        <div class="carousel-item active">
-          <img class="d-block img-fluid" src="images/carro/2.jpg" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="images/carro/3.jpg" alt="Third slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="images/carro/4.jpg" alt="Third slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="images/carro/5.jpg" alt="Third slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="images/carro/6.jpg" alt="Third slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="images/carro/7.jpg" alt="Third slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="images/carro/8.jpg" alt="Third slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="images/carro/9.jpg" alt="Third slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="images/carro/10.jpg" alt="Third slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="images/carro/11.jpg" alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
+
 
 
   <br>
@@ -341,9 +302,16 @@
   <script src="js/wow.min.js"></script>
   <script src="js/smooth-scroll.min.js"></script>
   <script src="js/sitio.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
-
-
+  <script type="text/javascript">
+    $(window).load(function() {
+        $(".loader").fadeOut("slow");
+    });
+    </script>
 
   <!-- ______________________________________________________________mensaje alerta____________________________________________________________________________!-->
   <Script language=JavaScript>
